--- a/webapp/src/components/Navbar.css
+++ b/webapp/src/components/Navbar.css
@@ -41,3 +41,10 @@
 .navbar .nav-links a.logout:hover {
   background-color: #804000;
 }
+
+.logo {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
