--- a/webapp/src/pages/Login.css
+++ b/webapp/src/pages/Login.css
@@ -20,6 +20,10 @@
 .login-logo img {
   max-width: 80%;
   height: auto;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .login-container {
