--- a/webapp/src/components/Footer.css
+++ b/webapp/src/components/Footer.css
@@ -3,9 +3,11 @@
   color: white;
   padding: 20px;
   text-align: center;
-  position: relative;
+  position: fixed;
   bottom: 0;
   width: 100%;
+  left: 0;
+  z-index: 1000;
 }
 
 .social-icons {
