--- a/webapp/src/components/Footer.css
+++ b/webapp/src/components/Footer.css
@@ -3,7 +3,7 @@
   color: white;
   padding: 20px;
   text-align: center;
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
   width: 100%;
   left: 0;
